<resources>
    <string name="app_name">POS</string>

    <!--Title-->
    <string name="Title_Amount">結帳</string>
    <string name="Title_PurchaseList">購買清單</string>
    <string name="Title_Type_Tea">純茶類</string>
    <string name="Title_Type_MilkTea">奶茶類</string>
    <string name="Title_SugarContent">糖量</string>
    <string name="Title_IceContent">冰量</string>
    <string name="Title_Ingredients">配料</string>
    <string name="Title_History">歷史紀錄</string>
    <string name="Title_TotalAmount">合計</string>
    <string name="Title_Pay">付款</string>
    <string name="Title_Change">找零</string>

    <!--標題-->
    <string name="DrinksTitle_Name">品名</string>
    <string name="DrinksTitle_Price">單價</string>
    <string name="DrinksTitle_Quantity">數量</string>
    <string name="DrinksTitle_TotalPrice">總價</string>

    <!--純茶類-->
    <string name="Tea_CeylonBlackTea">錫蘭紅茶</string>
    <string name="Tea_DarjeelingTea">大吉嶺紅茶</string>
    <string name="Tea_JasmineGreenTea">茉香綠茶</string>
    <string name="Tea_OolongTea">烏龍茶</string>
    <string name="Tea_PuerhTea">普爾茶</string>
    <string name="Tea_ChrysanthemumTea">菊花茶</string>

    <!--奶茶類-->
    <string name="MilkTea_BubbleMilkTea">珍珠奶茶</string>
    <string name="MilkTea_CoconutMilkTea">椰果奶茶</string>
    <string name="MilkTea_PuddingMilkTea">布丁奶茶</string>
    <string name="MilkTea_KantenMilkTea">寒天凍奶茶</string>
    <string name="MilkTea_GrassJellyMilkTea">仙草凍奶茶</string>

    <!--價格-->
    <string name="Price_CeylonBlackTea">20</string>
    <string name="Price_DarjeelingTea">25</string>
    <string name="Price_JasmineGreenTea">30</string>
    <string name="Price_OolongTea">15</string>
    <string name="Price_PuerhTea">20</string>
    <string name="Price_ChrysanthemumTea">30</string>
    <string name="Price_BubbleMilkTea">40</string>
    <string name="Price_CoconutMilkTea">40</string>
    <string name="Price_PuddingMilkTea">45</string>
    <string name="Price_KantenMilkTea">50</string>
    <string name="Price_GrassJellyMilkTea">50</string>

    <!--按鈕-->
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="button_07">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_00">0</string>
    <string name="button_500">500</string>
    <string name="button_1000">1000</string>
    <string name="button_Amount">結帳</string>
    <string name="button_Change">找零</string>
    <string name="button_Correction">訂正</string>
    <string name="button_Delete">刪除</string>
    <string name="button_Confirm">確定</string>
    <string name="button_Query">查詢</string>

    <!--配料-->
    <string name="Ingredients_TapiocaBalls">珍珠</string>
    <string name="Ingredients_SmallTapiocaBalls">小珍珠</string>
    <string name="Ingredients_Coconut">椰果</string>
    <string name="Ingredients_Pudding">布丁</string>
    <string name="Ingredients_Kanten">寒天</string>
    <string name="Ingredients_GrassJelly">仙草</string>
    <string name="Ingredients_None">無</string>

    <!--冰量-->
    <string name="Ice_none">去冰</string>
    <string name="Ice_Micro">微冰</string>
    <string name="Ice_Less">少冰</string>
    <string name="Ice_Normal">正常</string>
    <string name="Ice_More">多冰</string>

    <!--糖量-->
    <string name="Sugar_none">無糖</string>
    <string name="Sugar_Micro">微糖</string>
    <string name="Sugar_Less">少糖</string>
    <string name="Sugar_Normal">正常</string>
    <string name="Sugar_More">多糖</string>

</resources>
